# artsy

./: .travis.yml  Cargo.toml  README.md  input.txt
benches/: bench.rs
scripts/: generate_entries.py
src/: lib.rs  main.rs  node16.rs  node256.rs  node4.rs  node48.rs
